projects/elements/src/forms/control/control.global.css
/**
 * Majority of this CSS will be refactored back into the component shadow root once
 * this draft reaches consensous and lands in browsers https://github.com/w3c/csswg-drafts/issues/6867
 */

[nve-control] input::placeholder,
[nve-control] textarea::placeholder {
  color: var(--nve-sys-text-placeholder-color) !important;
}

[nve-control] input::-webkit-search-cancel-button,
[nve-control] input::-webkit-calendar-picker-indicator {
  opacity: 0 !important;
  display: none !important;
}

[nve-control]:has([nve-control]) {
  --control-type: custom;
}

[nve-control]:not(:has(label))::part(_label) {
  display: none !important;
}

[nve-control]:not(:has(nve-control-message:not([hidden])))::part(_messages) {
  display: none !important;
}

/** block controls */
[nve-control='']:has(label)::part(_internal-host) {
  grid-template-areas:
    'label label label'
    'input input input';
}

[nve-control='']:has(nve-control-message:not([hidden]))::part(_internal-host) {
  grid-template-areas:
    'input input input'
    'messages messages messages';
}

[nve-control='']:has(label):has(nve-control-message:not([hidden]))::part(_internal-host) {
  grid-template-areas:
    'label label label'
    'input input input'
    'messages messages messages';
}

[nve-control=''][layout='horizontal']:has(nve-control-message:not([hidden]))::part(_internal-host),
[nve-control=''][layout='horizontal-inline']:has(nve-control-message:not([hidden]))::part(_internal-host) {
  grid-template-areas:
    'label input input'
    '. messages messages';
}

[nve-control=''][layout='horizontal']:not(:has(nve-control-message:not([hidden])))::part(_internal-host),
[nve-control=''][layout='horizontal-inline']:not(:has(nve-control-message:not([hidden])))::part(_internal-host) {
  grid-template-areas: 'label input input';
}

/** inline controls */
[nve-control='inline']:has(label)::part(_internal-host) {
  grid-template-areas: 'input label label';
}

[nve-control='inline']:has(nve-control-message:not([hidden]))::part(_internal-host) {
  grid-template-areas:
    'input input input'
    'messages messages messages';
}

[nve-control='inline']:has(label):has(nve-control-message:not([hidden]))::part(_internal-host) {
  grid-template-areas:
    'input label label'
    'messages messages messages';
}

[nve-control='inline']:has(label):has(nve-control-message:not([hidden]))::part(_internal-host) {
  grid-template-areas:
    'input label label'
    'messages messages messages';
}

[nve-control='inline']:not(:has(nve-control-message:not([hidden])))::part(_internal-host) {
  grid-template-areas: 'input label label';
}

[nve-control='inline']:not(:has(label)):not(:has(nve-control-message:not([hidden])))::part(_internal-host) {
  grid-template-areas: 'input input input';
}

